Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  overflow-x: hidden;
   max-width: 2000px;
   margin: auto;
 }
